Fix form to display dynamically on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,7 @@ body {
     font-size: 2.0rem;
     padding: 10px;
     text-shadow: 2px 2px rgba(0,0,0,0.2);
+    max-height: 96px;
     overflow-wrap: break-word;
   } 
   .card-desc {
@@ -308,8 +309,10 @@ body {
     padding: 10px;
     font-style: italic;
     color: grey;
+    max-height: 150px;
     text-align: left;
     overflow-wrap: break-word;
+    overflow: hidden;
   }
   .card-status {
     bottom: 0px;
@@ -556,23 +559,26 @@ input[value="Save Task"]:hover, input[value="Update Task"]:hover  {
 
     .middle-form {
       height: 80%;
-      align-content: center;
+      justify-content: space-around;
     }
 
     .right-col-form {
       margin: 0px;
       padding: 0px;
       width: 90%;
+      justify-content: space-evenly;
     }
 
     #desc-container {
       width: 90%;
       margin: 0px;
       padding: 0px;
+      display: flex;
+      flex-direction: column;
     }
 
     #form-desc {
-      height: auto;
+      height: 100%;
     }
     
     .form-row label, .form-row p, .form-row input[type="button"] {
